master/taass/progetto-TAASS/kubernetes/discovery/discovery-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery-service-svc
  #namespace: mymusicspace

spec:
  type: LoadBalancer
  selector:
    app: discovery-service
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
      nodePort: 30011
