master/taass/progetto-TAASS/kubernetes/discovery/discovery-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discovery-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  #namespace: mymusicspace

spec:
  rules:
  - host: eureka.mymusicspace.it
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: discovery-service-svc
            port:
              number: 8761
